Fixed gap to match other more button.

--- a/src/css/components/menus.pcss
+++ b/src/css/components/menus.pcss
@@ -137,7 +137,7 @@
     /* more button */
     @apply tw-h-full tw-grid tw-items-center tw-justify-items-center;
     grid-template-columns: 1fr auto;
-    gap: 6px;
+    gap: 4px;
 
     & svg {
       margin-top: 2px;
